[project]
name = "flow-matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "configargparse>=1.7.5",
    "matplotlib>=3.10.8",
    "torch>=2.10.0",
    "torch-fidelity>=0.4.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
